2011-06-30  Ryan Johnson  <ryan.johnson@cs.utoronto.ca>

	* dtable.cc (fh_oom): Remove.
	(fh_calloc): Remove.
	(cnew): Redefine to handle NULL returns from cmalloc.
	(build_fh_name): Accommodate new definition of cnew.  Remove unneeded
	test for fh_oom.
	(fh_alloc): Ditto.

2011-06-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::read): Add comment.
	(fhandler_console::input_tcsetattr): Don't set ENABLE_PROCESSED_INPUT
	if IGNBRK flag is set.

2011-06-30  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (fh_oom): New static fhandler storage.
	(fh_calloc): New static function.  Add a comment to explain why this
	is needed.
	(cnew): Call fh_calloc as placement argument.
	(build_fh_name): Check return code from cnew against address of
	fh_oom to test for out of memory condition.
	(fh_alloc): Ditto.
	(build_fh_pc): Avoid a crash due to useing a NULL fhandler.
	* pipe.cc (fhandler_pipe::create): Check if build_fh_dev returned a
	valid pointer before using it.

2011-06-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (heap_info::fill_if_match): Rename info to
	note that this heap is a Windows heap.
	(format_process_maps): Print info about application heap.

2011-06-24  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::read): Don't generate ^@ on
	Ctrl+Alt+Space.

2011-06-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_pty_master::setup): Create pty pipes
	non-inheritable.

2011-06-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_pty_master::setup): Fix crash in debug
	output.

2011-06-18  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (normalize_win32_path): Skip all slashes after recognizing
	a ".." path component.  Add comment.

2011-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Drop local create_options variable.
	Use options member instead.