@@ -1,3 +1,8 @@
+2011-07-01  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler.cc (fhandler_base::open): Move NFS-specific code into the
+	code block handling FH_FS stuff.
+
 2011-06-30  Ryan Johnson  <ryan.johnson@cs.utoronto.ca>
 
 	* dtable.cc (fh_oom): Remove.
